Use Code128CBarcode from Common, new BarcodeFragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,6 +76,7 @@
 
     <!--cart, coupon/reward, checkout -->
     <string name="add">ADD</string>
+    <string name="view">VIEW</string>
     <string name="cartitem_qty_label">Qty</string>
     <string name="add_to_cart">ADD TO CART</string>
     <string name="add_another">Add Another</string>
