--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -270,6 +270,7 @@
     <string name="store_closed">Closed</string>
     <string name="store_24hours">24 hours</string>
     <string name="store_open_at">Open at</string>
+    <string name="store_num">Store</string>
     <string name="store_open_until">Open until</string>
     <string name="store_no_phone">Sorry, we can\'t find phone service.</string>
     <string name="store_no_maps">Sorry, we can\'t connect to a map.</string>
