--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -301,6 +301,11 @@
 
     <string name="network_settings">NETWORK SETTINGS</string>
 
+    <!-- Indicators -->
+    <string name="indicator_rebate">REBATE</string>
+    <string name="indicator_minimum">MINIMUM</string>
+    <string name="indicator_oversized">OVERSIZED</string>
+
     <!--errors-->
     <string name="error_network_connectivity">Network connectivity is required. Please enable and try again.</string>
     <string name="error_server_connection">Unable to contact server at this time. Please try again later.</string>
