Unitized indicators with popup dialog

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -239,12 +239,17 @@
     <string name="stars_no_reviews">no reviews</string>
     <string name="details_no_reviews">No Reviews</string>
 
-    <!--Shipping Logic-->
+    <!-- (old) Shipping Logic-->
     <string name="heavyweight">HEAVYWEIGHT</string>
     <string name="heavyweight_warning">Additional shipping fees apply</string>
     <string name="minimum_all_caps">MINIMUM</string>
     <string name="addon">$25 MINIMUM</string>
     <string name="addon_warning">$25 minimum to ship</string>
+
+    <!-- Indicators -->
+    <string name="indicator_rebate">REBATE</string>
+    <string name="indicator_minimum">MINIMUM</string>
+    <string name="indicator_oversized">OVERSIZED</string>
 
     <!-- Availability -->
     <string name="avail_nothing">Product not found</string>
@@ -300,11 +305,6 @@
 	<string name="upgrade_btn">Upgrade</string>
 
     <string name="network_settings">NETWORK SETTINGS</string>
-
-    <!-- Indicators -->
-    <string name="indicator_rebate">REBATE</string>
-    <string name="indicator_minimum">MINIMUM</string>
-    <string name="indicator_oversized">OVERSIZED</string>
 
     <!--errors-->
     <string name="error_network_connectivity">Network connectivity is required. Please enable and try again.</string>
