shipping text changes 1. for minimum orders 2. for oversized orders

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -85,6 +85,8 @@
     <string name="update_button">Update</string>
     <string name="free_shipping_msg1">Free shipping when you spend %1$s - only %2$s to go!</string>
     <string name="free_shipping_msg2">You qualify for FREE SHIPPING!</string>
+    <string name="oversized_shipping_msg">An additional shipping fee of %s has been added to the cart</string>
+    <string name="minimum_shipping_msg">You need to add %s or more to your order to ship this item</string>
     <string name="cart_updated_msg">Cart is updated</string>
     <string name="shipping">Shipping</string>
     <string name="expected_delivery">Expected Delivery:</string>
