--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -248,8 +248,8 @@
     <string name="indicator_rebate">{0} REBATE</string>
     <string name="indicator_minimum">{0} MINIMUM</string>
     <string name="indicator_oversized">OVERSIZED</string>
-    <string name="explain_minimum">Ships with any qualifying order over {1}</string>
-    <string name="explain_oversized">An additional shipping fee of {1} per item will be added to the cart</string>
+    <string name="explain_minimum">Ships with any qualifying order over $25</string>
+    <string name="explain_oversized">An additional shipping fee of $14.99 per item will be added to the cart</string>
 
     <!-- Availability -->
     <string name="avail_nothing">Product not found</string>
