reusing some of existing code and ui is redesigned according to new comps

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -254,7 +254,7 @@
     <!-- Availability -->
     <string name="avail_nothing">Product not found</string>
     <string name="avail_skuset">Varies</string>
-    <string name="avail_retailonly">Available in store only</string>
+    <string name="avail_retailonly">In store only</string>
     <string name="avail_specialorder">In store Special Order</string>
     <string name="avail_instock">In stock</string>
     <string name="avail_outofstock">Sorry, this item is out of stock</string>
